Improve QTI support